--- a/package.json
+++ b/package.json
@@ -17,6 +17,9 @@
     "knex": "^1.0.1",
     "pg": "^8.7.1"
   },
+  "engines": {
+    "node": "12.16.3"
+  },
   "devDependencies": {
     "nodemon": "^2.0.14"
   },
